{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 24,
  "lineage": "db8112aa-3939-9860-18aa-2caece002e42",
  "resources": [
    {
      "module": "module.NSG",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nsg3",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a69bb81b-cd1b-425c-9dcc-5bdf63f1839a/resourceGroups/rg-axion-sandbox-ci-01/providers/Microsoft.Network/networkSecurityGroups/database-nsg-axion-sandbox-ci-01",
            "location": "centralindia",
            "name": "database-nsg-axion-sandbox-ci-01",
            "resource_group_name": "rg-axion-sandbox-ci-01",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "database-nsg-axion-sandbox-ci-01",
            "resource_group_name": "rg-axion-sandbox-ci-01",
            "subscription_id": "a69bb81b-cd1b-425c-9dcc-5bdf63f1839a"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.pips",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pips",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "pips1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/a69bb81b-cd1b-425c-9dcc-5bdf63f1839a/resourceGroups/rg-axion-sandbox-ci-01/providers/Microsoft.Network/publicIPAddresses/pip-frontend-vm-axion-sandbox-ci-01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.219.52.156",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "pip-frontend-vm-axion-sandbox-ci-01",
            "resource_group_name": "rg-axion-sandbox-ci-01",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "pip-frontend-vm-axion-sandbox-ci-01",
            "resource_group_name": "rg-axion-sandbox-ci-01",
            "subscription_id": "a69bb81b-cd1b-425c-9dcc-5bdf63f1839a"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "pips2",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/a69bb81b-cd1b-425c-9dcc-5bdf63f1839a/resourceGroups/rg-axion-sandbox-ci-01/providers/Microsoft.Network/publicIPAddresses/pip-backend-vm-axion-sandbox-ci-01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.219.185.191",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "pip-backend-vm-axion-sandbox-ci-01",
            "resource_group_name": "rg-axion-sandbox-ci-01",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "pip-backend-vm-axion-sandbox-ci-01",
            "resource_group_name": "rg-axion-sandbox-ci-01",
            "subscription_id": "a69bb81b-cd1b-425c-9dcc-5bdf63f1839a"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "pips3",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/a69bb81b-cd1b-425c-9dcc-5bdf63f1839a/resourceGroups/rg-axion-sandbox-ci-01/providers/Microsoft.Network/publicIPAddresses/pip-database-vm-axion-sandbox-ci-01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.193.227.77",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "pip-database-vm-axion-sandbox-ci-01",
            "resource_group_name": "rg-axion-sandbox-ci-01",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "pip-database-vm-axion-sandbox-ci-01",
            "resource_group_name": "rg-axion-sandbox-ci-01",
            "subscription_id": "a69bb81b-cd1b-425c-9dcc-5bdf63f1839a"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a69bb81b-cd1b-425c-9dcc-5bdf63f1839a/resourceGroups/rg-axion-sandbox-ci-01/providers/Microsoft.Network/virtualNetworks/vnet-axion-sandbox-c01/subnets/frontend-subnet-axion-sandbox-ci-01",
            "name": "frontend-subnet-axion-sandbox-ci-01",
            "network_security_group_id_wo_version": 0,
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-axion-sandbox-ci-01",
            "route_table_id_wo_version": 0,
            "virtual_network_name": "vnet-axion-sandbox-c01"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "frontend-subnet-axion-sandbox-ci-01",
            "resource_group_name": "rg-axion-sandbox-ci-01",
            "subscription_id": "a69bb81b-cd1b-425c-9dcc-5bdf63f1839a",
            "virtual_network_name": "vnet-axion-sandbox-c01"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg",
            "module.vnet.azurerm_virtual_network.vnets"
          ]
        },
        {
          "index_key": "subnet2",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a69bb81b-cd1b-425c-9dcc-5bdf63f1839a/resourceGroups/rg-axion-sandbox-ci-01/providers/Microsoft.Network/virtualNetworks/vnet-axion-sandbox-c01/subnets/database-subnet-axion-sandbox-ci-01",
            "name": "database-subnet-axion-sandbox-ci-01",
            "network_security_group_id_wo_version": 0,
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-axion-sandbox-ci-01",
            "route_table_id_wo_version": 0,
            "virtual_network_name": "vnet-axion-sandbox-c01"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "database-subnet-axion-sandbox-ci-01",
            "resource_group_name": "rg-axion-sandbox-ci-01",
            "subscription_id": "a69bb81b-cd1b-425c-9dcc-5bdf63f1839a",
            "virtual_network_name": "vnet-axion-sandbox-c01"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg",
            "module.vnet.azurerm_virtual_network.vnets"
          ]
        },
        {
          "index_key": "subnet3",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a69bb81b-cd1b-425c-9dcc-5bdf63f1839a/resourceGroups/rg-axion-sandbox-ci-01/providers/Microsoft.Network/virtualNetworks/vnet-axion-sandbox-c01/subnets/backend-subnet-axion-sandbox-ci-01",
            "name": "backend-subnet-axion-sandbox-ci-01",
            "network_security_group_id_wo_version": 0,
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-axion-sandbox-ci-01",
            "route_table_id_wo_version": 0,
            "virtual_network_name": "vnet-axion-sandbox-c01"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "backend-subnet-axion-sandbox-ci-01",
            "resource_group_name": "rg-axion-sandbox-ci-01",
            "subscription_id": "a69bb81b-cd1b-425c-9dcc-5bdf63f1839a",
            "virtual_network_name": "vnet-axion-sandbox-c01"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg",
            "module.vnet.azurerm_virtual_network.vnets"
          ]
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "data",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm3",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a69bb81b-cd1b-425c-9dcc-5bdf63f1839a/resourceGroups/rg-axion-sandbox-ci-01/providers/Microsoft.Network/networkSecurityGroups/database-nsg-axion-sandbox-ci-01",
            "location": "centralindia",
            "name": "database-nsg-axion-sandbox-ci-01",
            "resource_group_name": "rg-axion-sandbox-ci-01",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "pips",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm3",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/a69bb81b-cd1b-425c-9dcc-5bdf63f1839a/resourceGroups/rg-axion-sandbox-ci-01/providers/Microsoft.Network/publicIPAddresses/pip-database-vm-axion-sandbox-ci-01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.193.227.77",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "pip-database-vm-axion-sandbox-ci-01",
            "resource_group_name": "rg-axion-sandbox-ci-01",
            "sku": "Standard"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm3",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a69bb81b-cd1b-425c-9dcc-5bdf63f1839a/resourceGroups/rg-axion-sandbox-ci-01/providers/Microsoft.Network/virtualNetworks/vnet-axion-sandbox-c01/subnets/database-subnet-axion-sandbox-ci-01",
            "name": "database-subnet-axion-sandbox-ci-01",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-axion-sandbox-ci-01",
            "virtual_network_name": "vnet-axion-sandbox-c01"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nics",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm3",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/a69bb81b-cd1b-425c-9dcc-5bdf63f1839a/resourceGroups/rg-axion-sandbox-ci-01/providers/Microsoft.Network/networkInterfaces/nic-database-vm-axion-sandbox-ci-01",
            "internal_domain_name_suffix": "nrbm5oohkscedeqxa0o3lkfgbc.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a69bb81b-cd1b-425c-9dcc-5bdf63f1839a/resourceGroups/rg-axion-sandbox-ci-01/providers/Microsoft.Network/publicIPAddresses/pip-database-vm-axion-sandbox-ci-01",
                "subnet_id": "/subscriptions/a69bb81b-cd1b-425c-9dcc-5bdf63f1839a/resourceGroups/rg-axion-sandbox-ci-01/providers/Microsoft.Network/virtualNetworks/vnet-axion-sandbox-c01/subnets/database-subnet-axion-sandbox-ci-01"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "name": "nic-database-vm-axion-sandbox-ci-01",
            "private_ip_address": "10.0.3.4",
            "private_ip_addresses": [
              "10.0.3.4"
            ],
            "resource_group_name": "rg-axion-sandbox-ci-01"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "nic-database-vm-axion-sandbox-ci-01",
            "resource_group_name": "rg-axion-sandbox-ci-01",
            "subscription_id": "a69bb81b-cd1b-425c-9dcc-5bdf63f1839a"
          },
          "dependencies": [
            "module.NSG.azurerm_network_security_group.NSG",
            "module.pips.azurerm_public_ip.pips",
            "module.rg.azurerm_resource_group.rg",
            "module.subnet.azurerm_subnet.subnets",
            "module.vms.data.azurerm_public_ip.pips",
            "module.vms.data.azurerm_subnet.subnets",
            "module.vnet.azurerm_virtual_network.vnets"
          ]
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm3",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a69bb81b-cd1b-425c-9dcc-5bdf63f1839a/resourceGroups/rg-axion-sandbox-ci-01/providers/Microsoft.Network/networkInterfaces/nic-database-vm-axion-sandbox-ci-01|/subscriptions/a69bb81b-cd1b-425c-9dcc-5bdf63f1839a/resourceGroups/rg-axion-sandbox-ci-01/providers/Microsoft.Network/networkSecurityGroups/database-nsg-axion-sandbox-ci-01",
            "network_interface_id": "/subscriptions/a69bb81b-cd1b-425c-9dcc-5bdf63f1839a/resourceGroups/rg-axion-sandbox-ci-01/providers/Microsoft.Network/networkInterfaces/nic-database-vm-axion-sandbox-ci-01",
            "network_security_group_id": "/subscriptions/a69bb81b-cd1b-425c-9dcc-5bdf63f1839a/resourceGroups/rg-axion-sandbox-ci-01/providers/Microsoft.Network/networkSecurityGroups/database-nsg-axion-sandbox-ci-01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.NSG.azurerm_network_security_group.NSG",
            "module.pips.azurerm_public_ip.pips",
            "module.rg.azurerm_resource_group.rg",
            "module.subnet.azurerm_subnet.subnets",
            "module.vms.azurerm_network_interface.nics",
            "module.vms.data.azurerm_network_security_group.nsg",
            "module.vms.data.azurerm_public_ip.pips",
            "module.vms.data.azurerm_subnet.subnets",
            "module.vnet.azurerm_virtual_network.vnets"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vnet1",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b9cf426c-54c7-4184-9217-069dd5a8a60a",
            "id": "/subscriptions/a69bb81b-cd1b-425c-9dcc-5bdf63f1839a/resourceGroups/rg-axion-sandbox-ci-01/providers/Microsoft.Network/virtualNetworks/vnet-axion-sandbox-c01",
            "location": "centralindia",
            "name": "vnet-axion-sandbox-c01",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-axion-sandbox-ci-01",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/a69bb81b-cd1b-425c-9dcc-5bdf63f1839a/resourceGroups/rg-axion-sandbox-ci-01/providers/Microsoft.Network/virtualNetworks/vnet-axion-sandbox-c01/subnets/frontend-subnet-axion-sandbox-ci-01",
                "name": "frontend-subnet-axion-sandbox-ci-01",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/a69bb81b-cd1b-425c-9dcc-5bdf63f1839a/resourceGroups/rg-axion-sandbox-ci-01/providers/Microsoft.Network/virtualNetworks/vnet-axion-sandbox-c01/subnets/backend-subnet-axion-sandbox-ci-01",
                "name": "backend-subnet-axion-sandbox-ci-01",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.3.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/a69bb81b-cd1b-425c-9dcc-5bdf63f1839a/resourceGroups/rg-axion-sandbox-ci-01/providers/Microsoft.Network/virtualNetworks/vnet-axion-sandbox-c01/subnets/database-subnet-axion-sandbox-ci-01",
                "name": "database-subnet-axion-sandbox-ci-01",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-axion-sandbox-c01",
            "resource_group_name": "rg-axion-sandbox-ci-01",
            "subscription_id": "a69bb81b-cd1b-425c-9dcc-5bdf63f1839a"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}